Init scopes API
